Updating form field description

--- a/unknowns.html
+++ b/unknowns.html
@@ -19,7 +19,7 @@
 
 <template name="unknownChangeName">
 	<form class="update-unknown">
-		<input type="text" id="username" name="name" class="update-unknown-field" placeholder="Type your name here and press [enter]" size="40" />
+		<input type="text" id="username" name="name" class="update-unknown-field" placeholder="Write something here" size="40" />
 	</form>
 	<br/>
 	{{> moronsCounter}}
